WIP #20: fonte financiadora

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -93,6 +93,7 @@
         <web-resource-collection>
             <web-resource-name>PESQUISA_ADMIN</web-resource-name>
             <url-pattern>/pesquisa/administracao/bolsas-produtividade-cnpq.jsf</url-pattern>
+            <url-pattern>/pesquisa/administracao/fontes-financiadoras.jsf</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>PESQUISA_ADMIN</role-name>
