WIP #19: configuração da autorização

--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,13 @@
             <artifactId>postgresql</artifactId>
             <version>${version.postgresql.jdbc}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.4.240</version>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -158,6 +165,84 @@
                 <version>${version.liberty}</version>
                 <configuration>
                     <copyDependencies>
+                        <dependencyGroup>
+                            <location>h2</location>
+                            <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+                            <dependency>
+                                <groupId>com.h2database</groupId>
+                                <artifactId>h2</artifactId>
+                            </dependency>
+                        </dependencyGroup>
+
+                        <dependencyGroup>
+                            <location>jdbc</location>
+                            <dependency>
+                                <groupId>org.postgresql</groupId>
+                                <artifactId>postgresql</artifactId>
+                                <version>42.7.4</version>
+                            </dependency>
+                        </dependencyGroup>
+
+                        <dependencyGroup>
+                            <location>log4j</location>
+                            <dependency>
+                                <groupId>org.apache.logging.log4j</groupId>
+                                <artifactId>log4j-core</artifactId>
+                                <version>2.24.3</version>
+                            </dependency>
+                        </dependencyGroup>
+
+                        <dependencyGroup>
+                            <location>hibernate</location>
+                            <dependency>
+                                <groupId>org.hibernate.orm</groupId>
+                                <artifactId>hibernate-core</artifactId>
+                                <version>6.4.4.Final</version>
+                            </dependency>
+
+                            <dependency>
+                                <groupId>org.jboss.logging</groupId>
+                                <artifactId>jboss-logging</artifactId>
+                                <version>3.5.0.Final</version>
+                            </dependency>
+
+                            <dependency>
+                                <groupId>org.hibernate.common</groupId>
+                                <artifactId>hibernate-commons-annotations</artifactId>
+                                <version>6.0.6.Final</version>
+                            </dependency>
+
+                            <dependency>
+                                <groupId>com.fasterxml</groupId>
+                                <artifactId>classmate</artifactId>
+                                <version>1.5.1</version>
+                            </dependency>
+
+                            <dependency>
+                                <groupId>io.smallrye</groupId>
+                                <artifactId>jandex</artifactId>
+                                <version>3.1.2</version>
+                            </dependency>
+
+                            <dependency>
+                                <groupId>net.bytebuddy</groupId>
+                                <artifactId>byte-buddy</artifactId>
+                                <version>1.14.11</version>
+                            </dependency>
+
+                            <dependency>
+                                <groupId>org.hibernate.orm</groupId>
+                                <artifactId>hibernate-envers</artifactId>
+                                <version>6.4.4.Final</version>
+                            </dependency>
+
+                            <dependency>
+                                <groupId>org.antlr</groupId>
+                                <artifactId>antlr4-runtime</artifactId>
+                                <version>4.13.0</version>
+                            </dependency>
+                        </dependencyGroup>
+
                         <dependencyGroup>
                             <location>derby</location>
 
